compiler/src/test/resources/amyc/parser/failing/ClassDefError4.amy
module ClassDef
  case class Foo(Int, y: Int) : Bar
end ClassDef
